--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <div class="loader">
     <div class="circle"></div>
     <div class="circle"></div>
-    <!-- <div class="circle"></div> -->
+    <div class="circle"></div>
     <div class="circle"></div>
   </div>
 </div>
